<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select_device_mode"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/rOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rBluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth"
            android:checked="true"/>

        <RadioButton
            android:layout_marginHorizontal="10dp"
            android:id="@+id/rWifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi"/>

        <RadioButton
            android:layout_marginHorizontal="10dp"
            android:id="@+id/rUSB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usb"
            android:checked="false" />

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerView"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/notFoundBlTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_bluetooth_not_find_bonded"
        android:layout_margin="10dp"
        android:textSize="16sp" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/wifiLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="0123456789."
            android:hint="IP" />

        <EditText
            android:id="@+id/port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="PORT" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel"
            android:textAllCaps="false"
            android:gravity="center"
            android:elevation="1dp"
            android:padding="10dp"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txtOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:textAllCaps="false"
            android:gravity="center"
            android:elevation="1dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

</LinearLayout>